feat: Refactor test classes to use MockitoExtension and remove redundant setup methods