@@ -9,11 +9,11 @@ import com.plazoleta.plazoleta_microservice.application.mapper.IDishUpdateReques
 import com.plazoleta.plazoleta_microservice.domain.api.IDishServicePort;
 import com.plazoleta.plazoleta_microservice.domain.model.Category;
 import com.plazoleta.plazoleta_microservice.domain.model.Dish;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.List;
 
@@ -22,6 +22,7 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
+@ExtendWith(MockitoExtension.class)
 class DishHandlerImplTest {
 
     @Mock
@@ -38,11 +39,6 @@ class DishHandlerImplTest {
 
     @InjectMocks
     private DishHandlerImpl dishHandler;
-
-    @BeforeEach
-    void setUp() {
-        MockitoAnnotations.openMocks(this);
-    }
 
     @Test
     void testCreateDish() {
@@ -151,7 +147,7 @@ class DishHandlerImplTest {
         List<DishResponseDto> result = dishHandler.getDishesByRestaurantAndCategory(restaurantId, categoryId, pageIndex, elementsPerPage);
 
         assertEquals(2, result.size());
-        assertEquals("Taco", result.get(0).getName());
+        assertEquals("Taco", result.getFirst().getName());
         verify(dishServicePort).findAllDishesByRestaurantIdAndCategoryId(restaurantId, categoryId, pageIndex, elementsPerPage);
         verify(dishResponseMapper).toDishResponseList(dishList);
     }
